# ColorDetection

./: .giignore  .gitignore  README.md  main.py  pyproject.toml
colordetection/: detector.py  mask.py
