[tool.poetry]
name = "colordetection"
version = "0.1.0"
description = "This is the color picker project using opencv that utilizes the Color detection algorithms to find the accurate color for picker."
authors = ["Anushk Sharma <anuskcse@gmail.com>"]
readme = "README.md"
packages = [{include = "colordetection"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
